// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="navbar-links"
>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target={undefined}
    to="/about"
  >
    Link - 
    <h6
      className="MuiTypography-root-1 MuiTypography-subtitle1-19 MuiTypography-colorInherit-30"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Sobre
    </h6>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target="_blank"
    to="http://materiabrasil.com.br/"
  >
    Link - 
    <h6
      className="MuiTypography-root-1 MuiTypography-subtitle1-19 MuiTypography-colorInherit-30"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Escritórios
    </h6>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target={undefined}
    to="/materials"
  >
    Link - 
    <h6
      className="MuiTypography-root-1 MuiTypography-subtitle1-19 MuiTypography-colorInherit-30"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Explore
    </h6>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target={undefined}
    to="/forum"
  >
    Link - 
    <h6
      className="MuiTypography-root-1 MuiTypography-subtitle1-19 MuiTypography-colorInherit-30"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Fórum
    </h6>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target={undefined}
    to={
      Object {
        "pathname": "/auth/sign-up",
        "state": Object {
          "referrer": "/suppliers/new",
        },
      }
    }
  >
    Link - 
    <h6
      className="MuiTypography-root-1 MuiTypography-subtitle1-19 MuiTypography-colorInherit-30"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Cadastrar fornecedor
    </h6>
  </div>
  <div>
    SignIn
  </div>
</div>
`;

exports[`with current user renders correctly 1`] = `
<div
  className="navbar-links"
>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target={undefined}
    to="/about"
  >
    Link - 
    <h6
      className="MuiTypography-root-1 MuiTypography-subtitle1-19 MuiTypography-colorInherit-30"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Sobre
    </h6>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target="_blank"
    to="http://materiabrasil.com.br/"
  >
    Link - 
    <h6
      className="MuiTypography-root-1 MuiTypography-subtitle1-19 MuiTypography-colorInherit-30"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Escritórios
    </h6>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target={undefined}
    to="/materials"
  >
    Link - 
    <h6
      className="MuiTypography-root-1 MuiTypography-subtitle1-19 MuiTypography-colorInherit-30"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Explore
    </h6>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target={undefined}
    to="/forum"
  >
    Link - 
    <h6
      className="MuiTypography-root-1 MuiTypography-subtitle1-19 MuiTypography-colorInherit-30"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Fórum
    </h6>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target={undefined}
    to="/suppliers/new"
  >
    Link - 
    <h6
      className="MuiTypography-root-1 MuiTypography-subtitle1-19 MuiTypography-colorInherit-30"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Cadastrar fornecedor
    </h6>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target={undefined}
    to="/profile"
  >
    Link - 
    <h6
      className="MuiTypography-root-1 MuiTypography-subtitle1-19 MuiTypography-colorInherit-30"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      undefined undefined
    </h6>
  </div>
  <div
    currentUser={Object {}}
  >
    SignOut
  </div>
</div>
`;

exports[`with current user with suppliers renders correctly 1`] = `
<div
  className="navbar-links"
>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target={undefined}
    to="/about"
  >
    Link - 
    <h6
      className="MuiTypography-root-1 MuiTypography-subtitle1-19 MuiTypography-colorInherit-30"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Sobre
    </h6>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target="_blank"
    to="http://materiabrasil.com.br/"
  >
    Link - 
    <h6
      className="MuiTypography-root-1 MuiTypography-subtitle1-19 MuiTypography-colorInherit-30"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Escritórios
    </h6>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target={undefined}
    to="/materials"
  >
    Link - 
    <h6
      className="MuiTypography-root-1 MuiTypography-subtitle1-19 MuiTypography-colorInherit-30"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Explore
    </h6>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target={undefined}
    to="/forum"
  >
    Link - 
    <h6
      className="MuiTypography-root-1 MuiTypography-subtitle1-19 MuiTypography-colorInherit-30"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      Fórum
    </h6>
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target={undefined}
    to="/suppliers/undefined"
  >
    Link - 
    <h6
      className="MuiTypography-root-1 MuiTypography-subtitle1-19 MuiTypography-colorInherit-30"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    />
  </div>
  <div
    className="navbar-link"
    style={
      Object {
        "color": "black",
        "textDecoration": "none",
      }
    }
    target={undefined}
    to="/profile"
  >
    Link - 
    <h6
      className="MuiTypography-root-1 MuiTypography-subtitle1-19 MuiTypography-colorInherit-30"
      style={
        Object {
          "alignSelf": "center",
          "display": "inline-block",
        }
      }
    >
      undefined undefined
    </h6>
  </div>
  <div
    currentUser={
      Object {
        "suppliers": Array [
          Object {},
          Object {},
        ],
      }
    }
  >
    SignOut
  </div>
</div>
`;
